--- a/views/products/show.hbs
+++ b/views/products/show.hbs
@@ -4,15 +4,16 @@
 <div class="card-mb-3">
     <div class="row g-0">
         <div class="col-md-4">
-            <img src="/img/{{image}}" class="img-fluid rounded-start">
+            <img src="/uploads/{{getImage}}" class="img-fluid rounded-start">
         </div>
         <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title">
-                    {{name}} ${{price}}
+                    {{getName}} ${{getPrice}}
                 </h5>
-                <p class="card-text">{{description}}</p>
-                <p class="card-text"><small class="text-muted">Add to Cart</small></p>
+                <p class="card-text">{{getDescription}}</p>
+                <p class="card-text"><small class="text-muted">Add to Cart</small> 
+                <small><a class="btn btn-primary" href="/products">Back to Catalog</a></small></p>
             </div>
         </div>
     </div>
