--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -9,6 +9,7 @@
       integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3'
       crossorigin='anonymous'
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel='stylesheet' href='/css/admin.css' />
     <title>Admin Panel: {{#if viewData.title}}{{viewData.title}}{{else}}Admin - Online Store{{/if}}</title>
   </head>
@@ -24,7 +25,7 @@
           <li><a href='/admin' class='nav-link text-white'>Admin - Home</a></li>
           <li><a href='/admin/products' class='nav-link text-white'>Admin - Products</a></li>
           <li>
-            <a href='/' class='mt-2 btn btn-primary text-white'>Online Home Page</a>
+            <a href='/products' class='mt-2 btn btn-primary text-white'>Back to Store</a>
           </li>
         </ul>
       </div>
