--- a/views/admin/products/index.hbs
+++ b/views/admin/products/index.hbs
@@ -70,9 +70,9 @@
                     </td>
                     <td>{{getName}}</td>
                     <td>
-                        <button class="btn btn-primary">
+                        <a class="btn btn-primary" href="/admin/products/{{getId}}">
                             <i class="bi-pencil"></i>
-                        </button>
+                        </a>
                     </td>
                     <td>
                         <form action="products/{{getId}}" method="POST">
