--- a/views/admin/products/index.hbs
+++ b/views/admin/products/index.hbs
@@ -40,7 +40,7 @@
             <label for="description" class="form-label">Description</label>
             <textarea name="description" id="description" rows="3" class="form-control" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Add New Product</button>
         </form>
     </div>
 </div>
