--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -36,6 +36,8 @@
               <a class='nav-link active' href='/'>Home</a>
               <a class='nav-link active' href='/products'>Products</a>
               <a class='nav-link active'  href='/about'>About</a>
+              <div class="vr bg-white mx-2 d-none d-lg-block"></div>
+              <a href="/auth/register" class="nav-link active">Register</a>
           </div>
         </div>
       </div>
