--- a/views/admin/products/index.hbs
+++ b/views/admin/products/index.hbs
@@ -6,13 +6,18 @@
         Create new product
     </div>
     <div class="card-body">
+        {{#if flashErrors}}
+        {{#each flashErrors}}
+        <p class="alert alert-danger">{{this}}</p>
+        {{/each}}
+        {{/if}}
         <form action="products/store" method="post" enctype="multipart/form-data">
         <div class="row">
             <div class="col">
                 <div class="row mb-3">
                     <label for="name" class="col-lg-2 col-md-6 col-sm-12 col-form-label">Name:</label>
                     <div class="col-lg-10 col-md-6 col-sm-12">
-                        <input type="text" name="name" id="name" class="form-control" required>
+                        <input type="text" name="name" id="name" class="form-control">
                     </div>
                 </div>
             </div>
@@ -20,7 +25,7 @@
                 <div class="row mb-3">
                     <label for="price" class="col-lg-2 col-md-6 col-sm-12 col-form-label">Price:</label>
                     <div class="col-lg-10 col-md-6 col-sm-12">
-                        <input type="text" name="price" id="price" class="form-control" required>
+                        <input type="text" name="price" id="price" class="form-control">
                     </div>
                 </div>
             </div>
@@ -38,7 +43,7 @@
         </div>
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <textarea name="description" id="description" rows="3" class="form-control" required></textarea>
+            <textarea name="description" id="description" rows="3" class="form-control"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Add New Product</button>
         </form>
