--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -37,7 +37,9 @@
               <a class='nav-link active' href='/products'>Products</a>
               <a class='nav-link active'  href='/about'>About</a>
               <div class="vr bg-white mx-2 d-none d-lg-block"></div>
-              
+              {{#if session.user.isAdmin }}
+              <a href="/admin/products" class="nav-link active">Go to Store Admin</a>
+              {{/if}}
               {{#if session.user}}
               <a href="/auth/logout" class="nav-link active">Logout ({{session.user.name}})</a>
               {{else}}
