--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -35,12 +35,14 @@
           <div class='navbar-nav ms-auto'>
               <a class='nav-link active' href='/'>Home</a>
               <a class='nav-link active' href='/products'>Products</a>
+              <a class='nav-link active' href='/cart'>Cart</a>
               <a class='nav-link active'  href='/about'>About</a>
               <div class="vr bg-white mx-2 d-none d-lg-block"></div>
               {{#if session.user.isAdmin }}
               <a href="/admin/products" class="nav-link active">Go to Store Admin</a>
               {{/if}}
               {{#if session.user}}
+              <a href="/account/orders" class="nav-link active">My Orders</a>
               <a href="/auth/logout" class="nav-link active">Logout ({{session.user.name}})</a>
               {{else}}
               <a href="/auth/login" class="nav-link active">Login</a>
